working on index; list populates with devour it button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,17 @@
 <ul>
     {{#each burgers}}
     {{#unless devoured}}
-    {{!-- {{> burgers/burger-block devoured=false}} --}}
+    {{> burgers/burger-block}}
     {{/unless}}
+    {{/each}}
+</ul>
+
+<ul>
+    {{#each burgers}}
+    {{#if devoured}}
+    <li>
+        {{burger_name}}
+    </li>
+    {{/if}}
     {{/each}}
 </ul>
