--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,19 +1,56 @@
-<h1>Burger Time</h1>
+<div class="container">
 
-<ul>
-    {{#each burgers}}
-    {{#unless devoured}}
-    {{> burgers/burger-block}}
-    {{/unless}}
-    {{/each}}
-</ul>
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="text-center">Burger Time</h1>
+        </div>
+    </div>
 
-<ul>
-    {{#each burgers}}
-    {{#if devoured}}
-    <li>
-        {{burger_name}}
-    </li>
-    {{/if}}
-    {{/each}}
-</ul>
+    <div class="row">
+
+        <div class="col-md-6">
+            <ul>
+                {{#each burgers}}
+                {{#unless devoured}}
+                {{> burgers/burger-block}}
+                {{/unless}}
+                {{/each}}
+            </ul>
+        </div>
+
+        <div class="col-md-6">
+            <ul>
+                {{#each burgers}}
+                {{#if devoured}}
+                <li>
+                    {{burger_name}}
+                </li>
+                {{/if}}
+                {{/each}}
+            </ul>
+        </div>
+
+    </div>
+
+    <div class="row">
+
+        <div class="col-lg-12 m-5">
+
+            <h3 class="text-center mb-3">Add a Burger!</h3>
+
+            <form class="text-center create-form">
+
+                <div class="form-group">
+                    <label for="burg">Type of Burger:</label>
+                    <input type="text" id="bu" name="name">
+                </div>
+
+                <button class="btn btn-success" type="submit">Add Burger</button>
+
+            </form>
+
+        </div>
+
+    </div>
+
+</div>
