--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
 
     <div class="row">
 
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <ul>
                 {{#each burgers}}
                 {{#unless devoured}}
@@ -18,7 +18,7 @@
             </ul>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <ul>
                 {{#each burgers}}
                 {{#if devoured}}
@@ -41,8 +41,8 @@
             <form class="text-center create-form">
 
                 <div class="form-group">
-                    <label for="burg">Type of Burger:</label>
-                    <input type="text" id="bu" name="name">
+                    <label for="bu"></label>Type of Burger:</label>
+                    <input type="text" id="bu" name="burger_name">
                 </div>
 
                 <button class="btn btn-success" type="submit">Add Burger</button>
