--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,25 +32,21 @@
 
     </div>
 
-    <div class="row">
+    <br>
 
-        <div class="col-lg-12 m-5">
+    <h3 class="text-center mt-5 mb-3">Add a Burger!</h3>
 
-            <h3 class="text-center mb-3">Add a Burger!</h3>
+    <form class="text-center create-form">
 
-            <form class="text-center create-form">
-
-                <div class="form-group">
-                    <label for="bu"></label>Type of Burger:</label>
-                    <input type="text" id="bu" name="burger_name">
-                </div>
-
-                <button class="btn btn-success" type="submit">Add Burger</button>
-
-            </form>
-
+        <div class="form-group">
+            <label for="bu"></label>Type of Burger:</label>
+            <input type="text" id="bu" name="burger_name">
         </div>
 
-    </div>
+        <button class="btn btn-success mb-5" type="submit">Add Burger</button>
+
+    </form>
+
+
 
 </div>
